# vinyl

./: .gitignore  CMakeLists.txt  NumpyConfig.cmake
include/vinyl/: iinput.h  iinput_controller.h  iinput_debug.h  iinput_device.h  iinput_image.h  iinput_keyboard.h  iinput_listener.h  iinput_mouse.h  iinput_user.h  iinput_window.h  input.h  input_button.h  input_controller.h  input_debug.h  input_device.h  input_event.h  input_image.h  input_key.h  input_keyboard.h  input_mouse.h  input_ps3.h  input_types.h  input_user.h  input_window.h  input_xbox.h  vinyl-c.h
python/: CMakeLists.txt  MANIFEST.in  build.py  demo.py  introduction.py  setup.py  vinyl.pyd
python/pyvinyl/: __init__.py  global_settings.py  gui.py  image.py  keyboard.py  log.py  mouse.py  process.py  record.py  screen.py  system.py  time.py  window.py
python/vinyl/: __init__.py  application.py  keyboard.py  mouse.py  plugin.py  screen.py  simulation.py
samples/: CMakeLists.txt
samples/hello/: CMakeLists.txt  main.cpp
source/: CMakeLists.txt  iinput.cpp  iinput_controller.cpp  iinput_device.cpp  iinput_keyboard.cpp  iinput_listener.cpp  iinput_mouse.cpp  input.cpp  input_controller.cpp  input_debug.cpp  input_device.cpp  input_event.cpp  input_keyboard.cpp  input_mouse.cpp  msw_input_device.cpp  msw_input_device.h  msw_input_image.cpp  msw_input_image.h  msw_input_keyboard.cpp  msw_input_keyboard.h  msw_input_mouse.cpp  msw_input_mouse.h  msw_input_user.cpp  msw_input_user.h  ndk_input_device.cpp  ndk_input_device.h  ndk_input_keyboard.h  ndk_input_touch.cpp  ndk_input_touch.h  vinyl-c.cpp  vinyl-py.cpp
source/vinyl-c/: CMakeLists.txt  input.cpp  input_controller.cpp  input_debug.cpp  input_device.cpp  input_event.cpp  input_image.cpp  input_keyboard.cpp  input_mouse.cpp  input_user.cpp  input_window.cpp  msw_input_device.cpp  msw_input_device.h  msw_input_hook.cpp  msw_input_hook.h  msw_input_image.cpp  msw_input_image.h  msw_input_keyboard.cpp  msw_input_keyboard.h  msw_input_mouse.cpp  msw_input_mouse.h  msw_input_record.cpp  msw_input_record.h  msw_input_user.cpp  msw_input_user.h  msw_input_window.cpp  msw_input_window.h  ndk_input_device.h  ndk_input_keyboard.cpp  ndk_input_touch.h  vinyl-c.cpp
source/vinyl-d3d11/: CMakeLists.txt  hook.cpp  hook.h  main.cpp
source/vinyl-hook/: CMakeLists.txt  main.cpp
source/vinyl-opengl/: CMakeLists.txt  hook.cpp  main.cpp  main.h
source/vinyl-py/: CMakeLists.txt  vinyl-py.cpp
test/: CMakeLists.txt
test/test/: CMakeLists.txt
test/vinyl-test/: CMakeLists.txt  main.cpp
