SET(LIB_NAME vinyl-hook)

SET(HEADER_PATH ${VINYL_PATH_HEADER})
SET(SOURCE_PATH ${VINYL_PATH_SOURCE}/vinyl-hook)

SET(INPUT_LIST
	${SOURCE_PATH}/main.cpp
)
SOURCE_GROUP("hook" FILES ${INPUT_LIST})

ADD_DEFINITIONS(-DVINYL_BUILD_DLL_EXPORT)
ADD_LIBRARY(${LIB_NAME} SHARED ${INPUT_LIST})

TARGET_INCLUDE_DIRECTORIES(${LIB_NAME} PUBLIC ${VINYL_PATH_INCLUDE})
TARGET_INCLUDE_DIRECTORIES(${LIB_NAME} PUBLIC ${VINYL_PATH_SOURCE}/vinyl-hook)

SET_TARGET_ATTRIBUTE(${LIB_NAME} "core")