SET(LIB_NAME vinyl-opengl)

SET(HEADER_PATH ${VINYL_PATH_HEADER})
SET(SOURCE_PATH ${VINYL_PATH_SOURCE}/vinyl-opengl)

SET(HOOK_LIST
	${SOURCE_PATH}/main.h
	${SOURCE_PATH}/main.cpp
	${SOURCE_PATH}/hook.h
	${SOURCE_PATH}/hook.cpp
)
SOURCE_GROUP("opengl" FILES ${HOOK_LIST})

ADD_DEFINITIONS(-DVINYL_BUILD_DLL_EXPORT)
ADD_LIBRARY(${LIB_NAME} SHARED ${HOOK_LIST})

TARGET_LINK_LIBRARIES(${LIB_NAME} PRIVATE vinyl-hook)

SET_TARGET_ATTRIBUTE(${LIB_NAME} "core")