SET(LIB_NAME vinyl-test)

SET(HEADER_PATH ${VINYL_PATH_HEADER})
SET(SOURCE_PATH ${VINYL_PATH_TEST}/${LIB_NAME})

SET(PLATFORM_LIST
	${SOURCE_PATH}/main.cpp
)
SOURCE_GROUP(${LIB_NAME} FILES ${PLATFORM_LIST})

IF(NOT VINYL_BUILD_SHARED_DLL AND VINYL_BUILD_PLATFORM_WINDOWS)
	ADD_DEFINITIONS(-DVINYL_STATIC)
ENDIF()

ADD_EXECUTABLE(${LIB_NAME} ${PLATFORM_LIST})

TARGET_LINK_LIBRARIES(${LIB_NAME} PRIVATE vinyl-c)

SET_TARGET_ATTRIBUTE(${LIB_NAME} "test")